--- a/14701183178338.html
+++ b/14701183178338.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-  
-  
+    
+  微娱乐SDK接入文档(iOS ver 0.1) - 
   
   </title>
  <meta name="description" content="">
@@ -69,14 +69,10 @@
             </div>
             <div class="large-9 medium-9 columns">
 
- 
+ <div class="markdown-body">
+<h1>微娱乐SDK接入文档(iOS ver 0.1)</h1>
 
-
-	
-		<div class="markdown-body">
-		<h1>微娱乐SDK接入文档(iOS ver 0.1)</h1>
-
-		<ul>
+<ul>
 <li>
 <a href="#toc_0">App接入准备材料</a>
 </li>
@@ -383,11 +379,39 @@ APP服务器-&gt;微娱乐服务器: 结果回调
 </table>
 
 
-		</div>
-	
+</div>
 
-  
-  
+<br /><br />
+<hr />
+
+<div class="row clearfix">
+  <div class="large-6 columns">
+	<div class="text-left" style="padding:15px 0px;">
+		
+	</div>
+  </div>
+  <div class="large-6 columns">
+	<div class="text-right" style="padding:15px 0px;">
+		
+	</div>
+  </div>
+</div>
+
+<div class="row">
+<div style="padding:0px 0.93em;" class="share-comments">
+
+</div>
+</div>
+<script type="text/javascript">
+	$(function(){
+		var currentURL = '14701183178338.html';
+		$('#side-nav a').each(function(){
+			if($(this).attr('href') == currentURL){
+				$(this).parent().addClass('active');
+			}
+		});
+	});
+</script>  
 </div></div>
 
 
